# nbapi

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: league_dash_player_stats.txt  league_dash_pt_stats.txt  league_leaders.txt  league_player_on_details.txt  player_estimated_metrics.txt  synergy_play_type.txt
nbapi/: __init__.py  constants.py  nbapi.py  player.py  team.py
nbapi/core/: constants.py  logger.py  result.py  types.py
nbapi/endpoints/: __init__.py  _base.py  commonallplayers.py  commonplayerinfo.py  commonteamroster.py  commonteamyears.py  endpoints.py  leaguedashoppptshot.py  leaguedashplayerbiostats.py  leaguedashplayerclutch.py  leaguedashplayerptshot.py  leaguedashplayershotlocations.py  leaguedashplayerstats.py  leaguedashptdefend.py  leaguedashptstats.py  leaguedashteamclutch.py  leaguedashteamptshot.py  leaguedashteamshotlocations.py  leaguedashteamstats.py  leaguegamelog.py  leaguehustlestatsplayer.py  leaguehustlestatsteam.py  leagueplayerondetails.py  playerestimatedmetrics.py  playergamelogs.py  playerindex.py  synergyplaytypes.py  teamdetails.py  teamestimatedmetrics.py  teamgamelogs.py  teaminfocommon.py
nbapi/endpoints/data/: __init__.py  _base.py  scoreboard.py
nbapi/endpoints/stats/: commonteamroster.py  commonteamyears.py  leaguedashoppptshot.py  leaguedashplayerbiostats.py  leaguedashplayerclutch.py  leaguedashplayerptshot.py  leaguedashplayershotlocations.py  leaguedashplayerstats.py  leaguedashptdefend.py  leaguedashptstats.py  leaguedashteamclutch.py  leaguedashteamptshot.py  leaguedashteamshotlocations.py  leaguedashteamstats.py  leaguegamelog.py  leaguehustlestatsplayer.py  leaguehustlestatsteam.py  leagueplayerondetails.py  playerestimatedmetrics.py  playergamelogs.py  playerindex.py  synergyplaytypes.py  teamdetails.py  teamestimatedmetrics.py  teamgamelogs.py  teaminfocommon.py
src/nbapi/: __init__.py  player.py  team.py
src/nbapi/core/: __init__.py  constants.py  logger.py
src/nbapi/data/: teams.tsv
src/nbapi/endpoints/: endpoints.py
src/nbapi/endpoints/data/: scoreboard.py
src/nbapi/endpoints/stats/: __init__.py  commonteamroster.py  commonteamyears.py  leaguedashoppptshot.py  leaguedashplayerbiostats.py  leaguedashplayerclutch.py  leaguedashplayerptshot.py  leaguedashplayershotlocations.py  leaguedashplayerstats.py  leaguedashptdefend.py  leaguedashptstats.py  leaguedashteamclutch.py  leaguedashteamptshot.py  leaguedashteamshotlocations.py  leaguedashteamstats.py  leaguegamelog.py  leaguehustlestatsplayer.py  leaguehustlestatsteam.py  leagueplayerondetails.py  playerestimatedmetrics.py  playergamelogs.py  playerindex.py  synergyplaytypes.py  teamdetails.py  teamestimatedmetrics.py  teamgamelogs.py  teaminfocommon.py
tests/: __init__.py
