[metadata]
name = nbapi
author = attr: nbapi.__author__
author_email = attr: nbapi.__email__
description = attr: nbapi.__summary__
long_description = file: README.md
version = attr: nbapi.__version__
url = attr: nbapi.__uri__
license = attr: nbapi.__license__

[options]
python_requires = ~=3.9
packages = find:
zip_safe = False

[flake8]
count = True
select = C,E,F,W,B,B950
ignore = E266,E731,E741,W503,W605,F401,F403,W291,W293
extend-ignore = E203, E501
max-complexity = 18
max-line-length = 90
statistics = True
per-file-ignores =
    __init__.py: F401
